# pdf-extrator

./: .dockerignore  .env.example  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/build-extraction-prompt/: SKILL.md
.claude/skills/evolve-schema/: SKILL.md
.claude/skills/implementation-contract/: SKILL.md
.claude/skills/python-stack-patterns/: SKILL.md
.claude/skills/register-domain/: SKILL.md
.claude/skills/testing-contract/: SKILL.md
.claude/skills/update-docs/: SKILL.md
alembic/: env.py
app/: celery_app.py  correction_processor.py  database.py  dependencies.py  deterministic_extractor.py  domain_classifier.py  domain_registration_handler.py  exceptions.py  extraction_orchestrator.py  extraction_prompt_builder.py  few_shot_retriever.py  llm_extractor.py  main.py  schema_registry.py  settings.py  tasks.py  vector_store.py
app/api/: auth.py  domains.py  jobs.py  query.py  validation.py
app/models/: __init__.py  correction.py  domain.py  extraction_job.py  schema_field.py  schema_version.py  user.py
docs/: ARCHITECTURE.md  PRD.md
docs/adr/: 0001-qdrant-vector-store.md  0002-sentence-transformers-portugues.md  0003-celery-redis-job-queue.md
docs/specs/: api.md  components.md  data-model.md
tests/: conftest.py  factories.py
